<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:background="@drawable/header_bg"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewFecha"
                android:contentDescription="@string/date_icon"
                android:src="@drawable/ic_update_black_24dp"
                android:tint="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtFecha"
                android:text="@string/fecha"
                android:textColor="@android:color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtTitle"
            android:text="@string/header_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/header_description"
            android:textColor="@android:color/white"
            android:layout_below="@id/txtTitle"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/converter_title"
                android:textSize="22sp"
                android:textColor="#808080"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:background="@drawable/header_bg"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtCurrency1"
                    android:text="@string/currency_1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:background="@drawable/rounded_button"
                    android:contentDescription="@string/converter_icon"
                    android:src="@drawable/ic_compare_arrows_black_24dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_width="32dp"
                    android:layout_height="32dp" />

                <TextView
                    android:text="@string/currency_2"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/inputValor"
                    android:background="@drawable/border"
                    android:ems="5"
                    android:hint="1"
                    android:gravity="end"
                    android:inputType="number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtValor"
                    android:text="@string/valor"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#808080"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:orientation="vertical"
        android:scrollbars="none"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>


</LinearLayout>